--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -3,7 +3,7 @@
 // =============================================================================
 
 .highlight {
-  background: #0d1117;
+  background: #1a2235;
   border-radius: $r-md;
   overflow: hidden;
 
